# iCDump

./: AUTHORS  CMakeLists.txt  README.md  iCDumpConfig.cmake.in
.github/: py_osx.sh
.github/workflows/: linux-x86-64.yml  osx.yml  test.yml
bindings/python/: CMakeLists.txt  description.rst  setup.cfg  setup.py
bindings/python/examples/: api_examples.py
bindings/python/src/: CMakeLists.txt  ObjC.hpp  iCDump.cpp  iterator.hpp
bindings/python/src/ObjC/: CMakeLists.txt  init.cpp  types_encoding.cpp
bindings/python/tools/: readobjc.py
cmake/: iCDumpGit.cmake  spdlog.cmake
include/iCDump/: Logging.hpp  NonCopyable.hpp  ObjC.hpp  config.hpp.in  iCDump.hpp  iterators.hpp  version.h.in
include/iCDump/ObjC/: Class.hpp  IVar.hpp  Metadata.hpp  Method.hpp  Parser.hpp  Property.hpp  Protocol.hpp  Types.hpp  TypesEncoding.hpp
scripts/docker/: compile_icdump.sh  compile_lief.sh  compile_llvm.sh
src/: MachOStream.cpp  MachOStream.hpp  iCDump.cpp  log.cpp  log.hpp  log_public.cpp
src/ClangAST/: ASTGen.cpp  ASTGen.hpp  utils.cpp  utils.hpp
src/ObjC/: Class.cpp  IVar.cpp  Metadata.cpp  Method.cpp  Parser.cpp  Property.cpp  Protocol.cpp  TypesEncoding.cpp
src/llvm-swift/swift/include/swift/Demangling/: Demangle.h  ManglingUtils.h
