[metadata]
name             = icdump
author           = Romain Thomas
author_email     = me@romainthomas.fr
description      = A modern Objective-C class dump
keywords         = reverse-engineering, objective-c
license          = Apache License 2.0
long_description = file: description.rst
long_description_content_type = text/x-rst; charset=UTF-8
url              = https://github.com/romainthomas/iCDump
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: C++
    Topic :: Software Development :: Libraries

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.8
scripts =
  tools/readobjc.py

[build_ext]
inplace=1
